<resources>
    <string name="app_name">payroll</string>
    <string name="employee_name">Employee Name</string>
    <string name="add_the_employee">Add the Employee</string>
    <string name="calculate_salary">Calculate Salary</string>
    <string name="back_to_home_page">Back To Home page</string>
    <string name="hourly_rate">Hourly Rate</string>


    <string name="home">Home</string>
    <string name="add_employee">Add Employee</string>
    <string name="calculate_employee_s_weekly_payroll">Calculate Employee\'s Weekly Payroll</string>
    <string name="employee_list">Employee List</string>
    <string name="english">English</string>

    <string name="press_to_start">Press To Start</string>
    <string name="current_employee_list">Current Employee List</string>
    <string name="back_to_the_home_page">Back To The Home page</string>

    <string name="hourly_rates">Hourly Rates</string>
    <string name="the_employee_name">The Employee Name</string>

    <string name="employee_id">employee id</string>


    <string name="enter_the_hours_worked">enter the hours worked</string>
    <string name="calculates_payroll">calculates payroll</string>
    <string name="payroll_detail">payroll detail</string>
    <string name="this_application_supportes_three_languages_english_arabic_french">This application supportes three languages:  English  , Arabic ,  French</string>
</resources>