<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/employeeNameDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_employee_name"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/employeeHourlyRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hourly_rate" />

    <EditText
        android:id="@+id/hoursWorkedInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_the_hours_worked" />

    <Button
        android:id="@+id/calculatePayrollButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculates_payroll" />

    <TextView
        android:id="@+id/payrollOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payroll_detail"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/toMainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home" />
</LinearLayout>

